
syntax = "proto2";

option java_package = "com.intel.genomicsdb";
option java_outer_classname = "GenomicsDBVidMapProto";


message Length {
  required string name = 1 [default = "length"];
  required string value = 2;
}

message InfoField {
  required string name = 1;
  required string type = 2 [default = "int"];
  optional string vcf_field_class_type = 3 [default = "INFO"];
  optional string length = 4;
}

message Chromosome {
  required string name = 1;
  required int64 length = 2;
  required int64 tiledb_column_offset = 3;
}

message VidMapping {
  repeated InfoField infofields = 1;
  repeated Chromosome chromosomes  = 2;
}

